@@ -18,3 +18,7 @@ services:
     arguments: [@service_container]
     tags:
       - { name: twig.extension }
+  club_layout_twig_text_extension:
+    class: Club\FormExtraBundle\Twig\TextExtension
+    tags:
+      - { name: twig.extension }
