@@ -2,6 +2,7 @@ ul#slideshow {
     position:relative;
     height:100%;
     list-style-type: none;
+    height: 120px;
 }
 ul#slideshow li {
     position:absolute;
