@@ -2,6 +2,7 @@
     * Added random password generator
     * Added random firstname, lastname and email generator
     * Added basic jquery ul/li slider
+    * Added a word-wrap function club_wordwrap
 
 1.15 (2014-05-13)
     * Added symfony user encoder helper class
